z-index fixed for room hist

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -365,6 +365,7 @@ div.historyContainer
 		height: 35px
 		font-size: 12px
 	.history
+		position: absolute
 		height: 250px
 		width: 300px
 		background-color: white
